--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebase": "^9.0.2",
     "firebase-functions": "3.6.0",
     "firebase-tools": "^8.4.1",
+    "netlify": "^12.0.1",
+    "netlify-cli": "^12.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
