--- a/package.json
+++ b/package.json
@@ -12,24 +12,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "auth0-js": "^9.19.1",
     "firebase": "^9.0.2",
     "firebase-functions": "3.6.0",
     "firebase-tools": "^8.4.1",
     "netlify": "^12.0.1",
-    "netlify-cli": "^12.0.11",
+    "netlify-cli": "^12.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
-    "react-use-auth": "^2.1.0-14",
     "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
